Fixed new posts with elements now being printed with correct spacing on new lines

--- a/JSReddit.css
+++ b/JSReddit.css
@@ -609,25 +609,29 @@ h3{
         font-size: 12px;
         padding-bottom: 15px;
         border-bottom: 1px solid lightgrey;
-        float: left;
+        /*float: left;*/
         
     }
     
     .newPosts{
+
         margin-left: 10px;
         margin-top: 20px;
         font-size: 12px;
         padding-bottom: 15px;
         border-bottom: 1px solid lightgrey;
-        float: left;
+        white-space: pre-wrap;
+        
+       /* float: left;*/
     
     }
-    
+
+
+
     h1{
         font-size: 1rem;
         font-weight: bold;
         margin-bottom: 5px;
-        
     }
     
     
@@ -641,13 +645,15 @@ h3{
         border-radius: 35px;
         float: left;
         text-align: center;
-         
+
+        margin-bottom: 5px;
     }
-    
+   
     h3{
         font-size: 12px;
         font-weight: normal;
-        float: left;
+        
+        
     }
 
     h6{
